--- a/resume.html
+++ b/resume.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Janice的个人简历</title>
-		<link rel="stylesheet" href="./main.css">
-		<script src="//at.alicdn.com/t/font_675487_5wlx0lz84k21emi.js"></script>
-		
+		<title>Janice的个人简历</title>	
+		<script src="//at.alicdn.com/t/font_675487_5wlx0lz84k21emi.js"></script>	
 		<style type="text/css">
 		.loading {width: 200px;height: 200px;position: relative;}
 		
@@ -25,20 +23,10 @@
        fill: currentColor;
        overflow: hidden;
 		}
-		.site-welcome {
-			display: none;
-			position: fixed;
-			top: 0px;left: 0px;width: 100%;height: 100%;
-			background: #888;
-			z-index: 1;
-			justify-content: center;
-			align-items: center;
-		}
-		.site-welcome.active {
-			display: flex;
-		}
+		.site-welcome { display: none; position: fixed; top: 0px;left: 0px;width: 100%;height: 100%; background: #888; z-index: 1; justify-content: center; align-items: center; }
+		.site-welcome.active { display: flex; }
 		</style>
-		
+		<link rel="stylesheet" href="./main.css">
 	</head>
 	<body>
 		<div id="sitewelcome" class="site-welcome active">
@@ -49,12 +37,26 @@
 					<a href="#" class="logo" alt="logo" style="float: left;">
 							<span class="rs">RS</span><span class="card">card</span>
 						</a>
-						<nav style="float: right;">
+						<nav class="menu" style="float: right;">
 							<ul class="clearfix">
-								<li><a href="">关于</a></li>
-								<li><a href="">技能</a></li>
-								<li><a href="">作品</a></li>
-								<li><a href="">博客</a></li>
+								<li><a href="#siteAbout">关于</a></li>
+								<li><a href="#siteSkills">技能</a></li>
+								<li>
+									<a href="#siteWorks">作品</a>
+									<ul class="submenu">
+										<li>作品1</li>
+										<li>作品2</li>
+										<li>作品3</li>
+									</ul>
+								</li>
+								<li>
+									<a href="">博客</a>
+									<ul class="submenu">
+										<li>博客1</li>
+										<li>博客2</li>
+										<li>博客3</li>
+									</ul>
+								</li>
 								<li><a href="">日历</a></li>
 								<li><a href="">联系方式</a></li>
 								<li><a href="">其他</a></li>
@@ -68,7 +70,7 @@
 			</div>
 		</div>
 		<main>
-			<div class="userCard">
+			<div id="siteAbout" class="userCard">
         <div class="pictureAndText clearfix">
             <div class="picture">
               <img src="./img/avatar.jpg" width="296px" height="343px" alt="头像">
@@ -129,7 +131,7 @@
 				技能：前端开发。
 			</p>	
 		</main>
-		<section class="skills">
+		<section id="siteSkills" class="skills">
 			<h2>技能</h2>
 			<ol class="clearfix">
 				<li>
@@ -170,7 +172,7 @@
 				</li>
 			</ol>
 		</section>
-		<section class="portfolio">
+		<section id="siteWorks" class="portfolio">
 			<h2>作品集</h2>
 			<nav>
 				<ol class="clearfix"> 
@@ -209,6 +211,28 @@
 					topNavBar.classList.add('sticky')
 				}else{
 					topNavBar.classList.remove('sticky')
+				}
+			}
+
+			let liTags = document.querySelectorAll('nav.menu > ul >li')
+			for( let i = 0; i < liTags.length; i++ ){
+				liTags[i].onmouseenter = function(x) {
+					x.currentTarget.classList.add('active')
+				}
+				liTags[i].onmouseleave = function(x) {
+					x.currentTarget.classList.remove('active')
+				}
+			}
+
+			let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+			for( let i = 0; i<aTags.length; i++){
+				aTags[i].onclick = function(x){
+					x.preventDefault()
+					let a = x.currentTarget
+					let href = a.getAttribute('href')
+					let element = document.querySelector(href)
+					let top = element.offsetTop
+					window.scrollTo(0,top - 80)
 				}
 			}
 		</script>
