--- a/resume.html
+++ b/resume.html
@@ -194,11 +194,17 @@
 				portfolio3.onclick = function(){
 					portfolioBar.className = "bar state-3"
 				}
-		</script>
-			<div class="jobs">
-				<div class="big"></div>
-				<div class="small"></div>
-				<div class="small"></div>
+			</script>
+			<div class="works" style="height: 576px">
+				<div class="big" style="top: 0; left: 0;">
+					<img src="img/portfolio1.jpg" alt="作品1">
+				</div>
+				<div class="small" style="top: 0; left: 645px;">
+					<img src="img/portfolio2.jpg" alt="作品2">
+				</div>
+				<div class="small" style="top: 298px; left: 645px">
+					<img src="img/portfolio3.jpg" alt="作品3">
+				</div>
 			</div>
 		</section>
 		<script>
