--- a/resume.html
+++ b/resume.html
@@ -1,246 +1,312 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Janice的个人简历</title>	
-		<script src="//at.alicdn.com/t/font_675487_5wlx0lz84k21emi.js"></script>	
-		<style type="text/css">
-		.loading {width: 200px;height: 200px;position: relative;}
-		
-		.loading::before,.loading::after {content: '';position: absolute;width: 0px;height: 0px;background: black;border-radius: 50%;top: 0px;left: 0px;bottom: 0px;right: 0px;margin: auto;animation: s 1.5s linear infinite;}
-		.loading::after {animation-delay: 0.75s;}
-		
+
+<head>
+	<title>Janice的个人简历</title>
+	<script src="//at.alicdn.com/t/font_675487_5wlx0lz84k21emi.js"></script>
+	<style type="text/css">
+		.loading {
+			width: 200px;
+			height: 200px;
+			position: relative;
+		}
+
+		.loading::before,
+		.loading::after {
+			content: '';
+			position: absolute;
+			width: 0px;
+			height: 0px;
+			background: black;
+			border-radius: 50%;
+			top: 0px;
+			left: 0px;
+			bottom: 0px;
+			right: 0px;
+			margin: auto;
+			animation: s 1.5s linear infinite;
+		}
+
+		.loading::after {
+			animation-delay: 0.75s;
+		}
+
 		@keyframes s {
 			0% {
-				width: 0px;height: 0px;opacity: 1;
+				width: 0px;
+				height: 0px;
+				opacity: 1;
 			}
+
 			100% {
-				width: 100px;height: 100px;opacity: 0;
+				width: 100px;
+				height: 100px;
+				opacity: 0;
 			}
 		}
-    .icon {
-       width: 1em; height: 1em;
-       vertical-align: -0.15em;
-       fill: currentColor;
-       overflow: hidden;
-		}
-		.site-welcome { display: none; position: fixed; top: 0px;left: 0px;width: 100%;height: 100%; background: #888; z-index: 1; justify-content: center; align-items: center; }
-		.site-welcome.active { display: flex; }
-		</style>
-		<link rel="stylesheet" href="./main.css">
-	</head>
-	<body>
-		<div id="sitewelcome" class="site-welcome active">
-			<div class="loading"></div>
-		</div>
-		<div id="topNavBar" class="topNavBar">
-			<div class="topNavBar-inner  clearfix">
-					<a href="#" class="logo" alt="logo" style="float: left;">
-							<span class="rs">RS</span><span class="card">card</span>
-						</a>
-						<nav class="menu" style="float: right;">
-							<ul class="clearfix">
-								<li><a href="#siteAbout">关于</a></li>
-								<li><a href="#siteSkills">技能</a></li>
-								<li>
-									<a href="#siteWorks">作品</a>
-									<ul class="submenu">
-										<li>作品1</li>
-										<li>作品2</li>
-										<li>作品3</li>
-									</ul>
-								</li>
-								<li>
-									<a href="">博客</a>
-									<ul class="submenu">
-										<li>博客1</li>
-										<li>博客2</li>
-										<li>博客3</li>
-									</ul>
-								</li>
-								<li><a href="">日历</a></li>
-								<li><a href="">联系方式</a></li>
-								<li><a href="">其他</a></li>
-							</ul>
-						</nav>
-			</div>
-		</div>
-		<div class="banner">
-			<div class="mask">
 
-			</div>
-		</div>
-		<main>
-			<div id="siteAbout" class="userCard">
-        <div class="pictureAndText clearfix">
-            <div class="picture">
-              <img src="./img/avatar.jpg" width="296px" height="343px" alt="头像">
-						</div>
-						<div class="text">
-              <span class="welcome">Hello
-								<span class="triangle"></span>
-							</span>
-              <h1>Janice</h1>
-              <p>前端开发工程师</p>
-              <hr>
-              <dl>
-								<dt>年龄</dt>
-								<dd>18</dd>
-								<dt>所在城市</dt>
-								<dd>广州</dd>
-								<dt>邮箱</dt>
-								<dd>zhangdan_job@foxmail.com</dd>
-								<dt>手机</dt>
-								<dd>13265177247</dd>   
-              </dl>           
-            </div>
-        </div>
-        <footer class="media">
-            <a href="#">
-							<svg class="icon" aria-hidden="true">
-								<use xlink:href="#icon-github"></use>
-						</svg>
-						</a>
-            <a href="#">
-							<svg class="icon" aria-hidden="true">
-								<use xlink:href="#icon-jianshu"></use>
-						</svg>
-						</a>
-            <a href="#">
-							<svg class="icon" aria-hidden="true">
-								<use xlink:href="#icon-twitter"></use>
-						</svg>
-						</a>
-            <a href="#">
-							<svg class="icon" aria-hidden="true">
-								<use xlink:href="#icon-weibo"></use>
-						</svg>
-						</a>
-            <a href="#">
-							<svg class="icon" aria-hidden="true">
-								<use xlink:href="#icon-jirengulogozaoqi"></use>
-						</svg>
-						</a>
-        </footer>
-			</div>
-			<p class="downloadResume-wrapper">
-				<a href="#" class="downloadResume" target="_blank" download>下载 PDF 简历</a>
-			</p>
-			<p class="selfIntroduction">
-				Janice，前端开发工程师。
-				<br>
-				技能：前端开发。
-			</p>	
-		</main>
-		<section id="siteSkills" class="skills">
-			<h2>技能</h2>
-			<ol class="clearfix">
-				<li>
-					<h3>HTML 5 &amp; CSS3</h3>
-					<div class="progressBar">
-						<div class="progress"></div>
-					</div>
-				</li>
-				<li>
-					<h3>JavaScript</h3>
-					<div class="progressBar">
-						<div class="progress"></div>
-					</div>
-				</li>
-				<li>
-						<h3>JQuery</h3>
-						<div class="progressBar">
-							<div class="progress"></div>
-						</div>
-				</li>
-				<li>
-						<h3>Vue</h3>
-						<div class="progressBar">
-							<div class="progress"></div>
-						</div>
-				</li>
-				<li>
-						<h3>React</h3>
-						<div class="progressBar">
-							<div class="progress"></div>
-						</div>
-				</li>				
-				<li>
-						<h3>HTTP</h3>
-						<div class="progressBar">
-							<div class="progress"></div>
-						</div>
-				</li>
-			</ol>
-		</section>
-		<section id="siteWorks" class="portfolio">
-			<h2>作品集</h2>
-			<nav>
-				<ol class="clearfix"> 
-					<li id="portfolio1">所有</li>
-					<li id="portfolio2">框架</li>
-					<li id="portfolio3">原生JS&amp;CSS</li>
-				</ol>
-				<div id="portfolioBar" class="bar state-1">
-					<div class="bar-inner"></div>
-				</div>
+		.icon {
+			width: 1em;
+			height: 1em;
+			vertical-align: -0.15em;
+			fill: currentColor;
+			overflow: hidden;
+		}
+
+		.site-welcome {
+			display: none;
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			background: #888;
+			z-index: 1;
+			justify-content: center;
+			align-items: center;
+		}
+
+		.site-welcome.active {
+			display: flex;
+		}
+	</style>
+	<link rel="stylesheet" href="./main.css">
+</head>
+
+<body>
+	<div id="sitewelcome" class="site-welcome active">
+		<div class="loading"></div>
+	</div>
+	<div id="topNavBar" class="topNavBar">
+		<div class="topNavBar-inner  clearfix">
+			<a href="#" class="logo" alt="logo" style="float: left;">
+				<span class="rs">RS</span><span class="card">card</span>
+			</a>
+			<nav class="menu" style="float: right;">
+				<ul class="clearfix">
+					<li><a href="#siteAbout">关于</a></li>
+					<li><a href="#siteSkills">技能</a></li>
+					<li>
+						<a href="#siteWorks">作品</a>
+						<ul class="submenu">
+							<li>作品1</li>
+							<li>作品2</li>
+							<li>作品3</li>
+						</ul>
+					</li>
+					<li>
+						<a href="">博客</a>
+						<ul class="submenu">
+							<li>博客1</li>
+							<li>博客2</li>
+							<li>博客3</li>
+						</ul>
+					</li>
+					<li><a href="">日历</a></li>
+					<li><a href="">联系方式</a></li>
+					<li><a href="">其他</a></li>
+				</ul>
 			</nav>
-			<script>
-				portfolio1.onclick = function(){
-					portfolioBar.className = "bar state-1"
-				}
-				portfolio2.onclick = function(){
-					portfolioBar.className = "bar state-2"
-				}
-				portfolio3.onclick = function(){
-					portfolioBar.className = "bar state-3"
-				}
-			</script>
-			<div class="works" style="height: 576px">
-				<div class="big" style="top: 0; left: 0;">
-					<img src="img/portfolio1.jpg" alt="作品1">
+		</div>
+	</div>
+	<div class="banner">
+		<div class="mask">
+
+		</div>
+	</div>
+	<main>
+		<div id="siteAbout" class="userCard">
+			<div class="pictureAndText clearfix">
+				<div class="picture">
+					<img src="./img/avatar.jpg" width="296px" height="343px" alt="头像">
 				</div>
-				<div class="small" style="top: 0; left: 645px;">
-					<img src="img/portfolio2.jpg" alt="作品2">
-				</div>
-				<div class="small" style="top: 298px; left: 645px">
-					<img src="img/portfolio3.jpg" alt="作品3">
+				<div class="text">
+					<span class="welcome">Hello
+						<span class="triangle"></span>
+					</span>
+					<h1>Janice</h1>
+					<p>前端开发工程师</p>
+					<hr>
+					<dl>
+						<dt>年龄</dt>
+						<dd>18</dd>
+						<dt>所在城市</dt>
+						<dd>广州</dd>
+						<dt>邮箱</dt>
+						<dd>zhangdan_job@foxmail.com</dd>
+						<dt>手机</dt>
+						<dd>13265177247</dd>
+					</dl>
 				</div>
 			</div>
-		</section>
+			<footer class="media">
+				<a href="#">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#icon-github"></use>
+					</svg>
+				</a>
+				<a href="#">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#icon-jianshu"></use>
+					</svg>
+				</a>
+				<a href="#">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#icon-twitter"></use>
+					</svg>
+				</a>
+				<a href="#">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#icon-weibo"></use>
+					</svg>
+				</a>
+				<a href="#">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#icon-jirengulogozaoqi"></use>
+					</svg>
+				</a>
+			</footer>
+		</div>
+		<p class="downloadResume-wrapper">
+			<a href="#" class="downloadResume" target="_blank" download>下载 PDF 简历</a>
+		</p>
+		<p class="selfIntroduction">
+			Janice，前端开发工程师。
+			<br>
+			技能：前端开发。
+		</p>
+	</main>
+	<section id="siteSkills" class="skills">
+		<h2>技能</h2>
+		<ol class="clearfix">
+			<li>
+				<h3>HTML 5 &amp; CSS3</h3>
+				<div class="progressBar">
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+				<h3>JavaScript</h3>
+				<div class="progressBar">
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+				<h3>JQuery</h3>
+				<div class="progressBar">
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+				<h3>Vue</h3>
+				<div class="progressBar">
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+				<h3>React</h3>
+				<div class="progressBar">
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+				<h3>HTTP</h3>
+				<div class="progressBar">
+					<div class="progress"></div>
+				</div>
+			</li>
+		</ol>
+	</section>
+	<section id="siteWorks" class="portfolio">
+		<h2>作品集</h2>
+		<nav>
+			<ol class="clearfix">
+				<li id="portfolio1">所有</li>
+				<li id="portfolio2">框架</li>
+				<li id="portfolio3">原生JS&amp;CSS</li>
+			</ol>
+			<div id="portfolioBar" class="bar state-1">
+				<div class="bar-inner"></div>
+			</div>
+		</nav>
 		<script>
-			setTimeout(function(){
-				sitewelcome.classList.remove('active')
-			},1000)
-
-			window.onscroll = function(xxx){
-				if(window.scrollY > 0){
-					topNavBar.classList.add('sticky')
-				}else{
-					topNavBar.classList.remove('sticky')
-				}
+			portfolio1.onclick = function () {
+				portfolioBar.className = "bar state-1"
 			}
-
-			let liTags = document.querySelectorAll('nav.menu > ul >li')
-			for( let i = 0; i < liTags.length; i++ ){
-				liTags[i].onmouseenter = function(x) {
-					x.currentTarget.classList.add('active')
-				}
-				liTags[i].onmouseleave = function(x) {
-					x.currentTarget.classList.remove('active')
-				}
+			portfolio2.onclick = function () {
+				portfolioBar.className = "bar state-2"
 			}
-
-			let aTags = document.querySelectorAll('nav.menu > ul > li > a')
-			for( let i = 0; i<aTags.length; i++){
-				aTags[i].onclick = function(x){
-					x.preventDefault()
-					let a = x.currentTarget
-					let href = a.getAttribute('href')
-					let element = document.querySelector(href)
-					let top = element.offsetTop
-					window.scrollTo(0,top - 80)
-				}
+			portfolio3.onclick = function () {
+				portfolioBar.className = "bar state-3"
 			}
 		</script>
-	</body>
+		<div class="works" style="height: 576px">
+			<div class="big" style="top: 0; left: 0;">
+				<img src="img/portfolio1.jpg" alt="作品1">
+			</div>
+			<div class="small" style="top: 0; left: 645px;">
+				<img src="img/portfolio2.jpg" alt="作品2">
+			</div>
+			<div class="small" style="top: 298px; left: 645px">
+				<img src="img/portfolio3.jpg" alt="作品3">
+			</div>
+		</div>
+	</section>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.3.0/Tween.min.js"></script>
+	<script>
+		setTimeout(function () {
+			sitewelcome.classList.remove('active')
+		}, 1000)
+
+		window.onscroll = function (xxx) {
+			if (window.scrollY > 0) {
+				topNavBar.classList.add('sticky')
+			} else {
+				topNavBar.classList.remove('sticky')
+			}
+		}
+
+		let liTags = document.querySelectorAll('nav.menu > ul >li')
+		for (let i = 0; i < liTags.length; i++) {
+			liTags[i].onmouseenter = function (x) {
+				x.currentTarget.classList.add('active')
+			}
+			liTags[i].onmouseleave = function (x) {
+				x.currentTarget.classList.remove('active')
+			}
+		}
+
+		let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+		function animate(time) {
+			requestAnimationFrame(animate)
+			TWEEN.update(time)
+		}
+		requestAnimationFrame(animate);
+
+		for (let i = 0; i < aTags.length; i++) {
+			aTags[i].onclick = function (x) {
+				x.preventDefault()
+				let top = document.querySelector(x.currentTarget.getAttribute('href')).offsetTop
+				//缓慢移动
+				let currentTop = window.scrollY
+				let targetTop = top - 80
+				let s = targetTop - currentTop  // 路程
+				var coords = { y: currentTop }  // 起始位置
+				var t = Math.abs((s / 100) * 300)  // 时间
+				if (t > 500) {
+					t = 500
+				}
+				var tween = new TWEEN.Tween(coords) // 起始位置
+					.to({ y: targetTop }, t)  // 结束位置 和 时间
+					.easing(TWEEN.Easing.Quadratic.InOut) // 缓动类型
+					.onUpdate(function () {
+						// coords.y 已经变了
+						window.scrollTo(0, coords.y) // 如何更新界面
+					})
+					.start(); // 开始缓动
+			}
+		}
+	</script>
+</body>
+
 </html>
