--- a/resume.html
+++ b/resume.html
@@ -182,37 +182,37 @@
 			<li>
 				<h3>HTML 5 &amp; CSS3</h3>
 				<div class="progressBar">
-					<div class="progress"></div>
+					<div class="progress" style="width: 10%;"></div>
 				</div>
 			</li>
 			<li>
 				<h3>JavaScript</h3>
 				<div class="progressBar">
-					<div class="progress"></div>
+					<div class="progress" style="width: 20%;"></div>
 				</div>
 			</li>
 			<li>
 				<h3>JQuery</h3>
 				<div class="progressBar">
-					<div class="progress"></div>
+					<div class="progress" style="width: 30%;"></div>
 				</div>
 			</li>
 			<li>
 				<h3>Vue</h3>
 				<div class="progressBar">
-					<div class="progress"></div>
+					<div class="progress" style="width: 40%;"></div>
 				</div>
 			</li>
 			<li>
 				<h3>React</h3>
 				<div class="progressBar">
-					<div class="progress"></div>
+					<div class="progress" style="width: 50%;"></div>
 				</div>
 			</li>
 			<li>
 				<h3>HTTP</h3>
 				<div class="progressBar">
-					<div class="progress"></div>
+					<div class="progress" style="width: 60%;"></div>
 				</div>
 			</li>
 		</ol>
