--- a/resume.html
+++ b/resume.html
@@ -5,31 +5,14 @@
 	<title>Janice的个人简历</title>
 	<script src="//at.alicdn.com/t/font_675487_5wlx0lz84k21emi.js"></script>
 	<style type="text/css">
-		.loading {
-			width: 200px;
-			height: 200px;
-			position: relative;
-		}
+		.loading { width: 200px; height: 200px; position: relative; }
 
 		.loading::before,
-		.loading::after {
-			content: '';
-			position: absolute;
-			width: 0px;
-			height: 0px;
-			background: black;
-			border-radius: 50%;
-			top: 0px;
-			left: 0px;
-			bottom: 0px;
-			right: 0px;
-			margin: auto;
-			animation: s 1.5s linear infinite;
+		.loading::after { content: ''; position: absolute; width: 0px; height: 0px; background: black; border-radius: 50%;
+			top: 0px; left: 0px; bottom: 0px; right: 0px; margin: auto; animation: s 1.5s linear infinite;
 		}
 
-		.loading::after {
-			animation-delay: 0.75s;
-		}
+		.loading::after { animation-delay: 0.75s; }
 
 		@keyframes s {
 			0% {
@@ -53,23 +36,11 @@
 			overflow: hidden;
 		}
 
-		.site-welcome {
-			display: none;
-			position: fixed;
-			top: 0px;
-			left: 0px;
-			width: 100%;
-			height: 100%;
-			background: #888;
-			z-index: 1;
-			justify-content: center;
-			align-items: center;
-		}
+		.site-welcome { display: none; position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background: #888; z-index: 1; justify-content: center; align-items: center;}
 
-		.site-welcome.active {
-			display: flex;
-		}
+		.site-welcome.active { display: flex; }
 	</style>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 	<link rel="stylesheet" href="./main.css">
 </head>
 
@@ -219,48 +190,50 @@
 	</section>
 	<section data-x id="siteWorks" class="portfolio">
 		<h2>作品集</h2>
-		<nav>
-			<ol class="clearfix">
-				<li id="portfolio1">所有</li>
-				<li id="portfolio2">框架</li>
-				<li id="portfolio3">原生JS&amp;CSS</li>
-			</ol>
-			<div id="portfolioBar" class="bar state-1">
-				<div class="bar-inner"></div>
+		<!-- Slider main container -->
+		<div class="swiper-container">
+			<!-- Additional required wrapper -->
+			<div class="swiper-wrapper">
+				<!-- Slides -->
+				<img src="./img/works/apple-style-slides.png" alt="苹果风格轮播" class="swiper-slide">
+				<img src="./img/works/nav-page.PNG" alt="自制导航页" class="swiper-slide">
+				<img src="./img/works/canvas.jpg" alt="Canvas画板" class="swiper-slide">
 			</div>
-		</nav>
-		<script>
-			portfolio1.onclick = function () {
-				portfolioBar.className = "bar state-1"
-			}
-			portfolio2.onclick = function () {
-				portfolioBar.className = "bar state-2"
-			}
-			portfolio3.onclick = function () {
-				portfolioBar.className = "bar state-3"
-			}
-		</script>
-		<div class="works" style="height: 576px">
-			<div class="big" style="top: 0; left: 0;">
-				<img src="img/portfolio1.jpg" alt="作品1">
-			</div>
-			<div class="small" style="top: 0; left: 645px;">
-				<img src="img/portfolio2.jpg" alt="作品2">
-			</div>
-			<div class="small" style="top: 298px; left: 645px">
-				<img src="img/portfolio3.jpg" alt="作品3">
-			</div>
+			<!-- If we need pagination -->
+			<div class="swiper-pagination"></div>
+
+			<!-- If we need navigation buttons -->
+			<div class="swiper-button-prev"></div>
+			<div class="swiper-button-next"></div>
+
 		</div>
 	</section>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.3.0/Tween.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 	<script>
+		var mySwiper = new Swiper('.swiper-container', {
+			// Optional parameters
+			loop: true,
+
+			// If we need pagination
+			pagination: {
+				el: '.swiper-pagination',
+			},
+
+			// Navigation arrows
+			navigation: {
+				nextEl: '.swiper-button-next',
+				prevEl: '.swiper-button-prev',
+			},
+
+		})
 		setTimeout(function () {
 			sitewelcome.classList.remove('active')
 		}, 1000)
 
 		//添加offset类
 		let specialTags = document.querySelectorAll('[data-x]')
-		for(let i = 0;i<specialTags.length;i++){
+		for (let i = 0; i < specialTags.length; i++) {
 			specialTags[i].classList.add('offset')
 		}
 		findClosest()
@@ -274,11 +247,11 @@
 			findClosest()
 		}
 
-		function findClosest(){
+		function findClosest() {
 			let specialTags = document.querySelectorAll('[data-x]')
 			let minIndex = 0
-			for(let i = 0; i<specialTags.length; i++){
-				if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)){
+			for (let i = 0; i < specialTags.length; i++) {
+				if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
 					minIndex = i
 				}
 			}
@@ -288,7 +261,7 @@
 			let a = document.querySelector('a[href="#' + id + '"]')
 			let li = a.parentNode
 			let brothersAndMe = li.parentNode.children
-			for(let i = 0;i<brothersAndMe.length;i++){
+			for (let i = 0; i < brothersAndMe.length; i++) {
 				brothersAndMe[i].classList.remove('highlight')
 			}
 			li.classList.add('highlight')
