--- a/resume.html
+++ b/resume.html
@@ -156,7 +156,7 @@
 		<h2>作品集</h2>
 		<!-- Slider main container -->
 		<div class="swiper-container">
-			
+
 			<div class="swiper-wrapper">
 				<img src="./img/works/apple-style-slides.png" alt="苹果风格轮播" class="swiper-slide">
 				<img src="./img/works/nav-page.PNG" alt="自制导航页" class="swiper-slide">
@@ -172,103 +172,15 @@
 	</section>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.3.0/Tween.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+	<!--模块化-->
+	<script src="./js/init-swiper.js"></script>
+	<script src="./js/sticky-topbar.js"></script>
+	<script src="./js/auto-slide-up.js"></script>
+	<script src="./js/smoothly-navigation.js"></script>
 	<script>
-		var mySwiper = new Swiper('.swiper-container', {
-			// Optional parameters
-			loop: true,
-
-			// If we need pagination
-			pagination: {
-				el: '.swiper-pagination',
-			},
-
-			// Navigation arrows
-			navigation: {
-				nextEl: '.swiper-button-next',
-				prevEl: '.swiper-button-prev',
-			},
-
-		})
 		setTimeout(function () {
 			sitewelcome.classList.remove('active')
 		}, 1000)
-
-		//添加offset类
-		let specialTags = document.querySelectorAll('[data-x]')
-		for (let i = 0; i < specialTags.length; i++) {
-			specialTags[i].classList.add('offset')
-		}
-		findClosest()
-
-		window.onscroll = function (x) {
-			if (window.scrollY > 0) {
-				topNavBar.classList.add('sticky')
-			} else {
-				topNavBar.classList.remove('sticky')
-			}
-			findClosest()
-		}
-
-		function findClosest() {
-			let specialTags = document.querySelectorAll('[data-x]')
-			let minIndex = 0
-			for (let i = 0; i < specialTags.length; i++) {
-				if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
-					minIndex = i
-				}
-			}
-
-			specialTags[minIndex].classList.remove('offset')
-			let id = specialTags[minIndex].id
-			let a = document.querySelector('a[href="#' + id + '"]')
-			let li = a.parentNode
-			let brothersAndMe = li.parentNode.children
-			for (let i = 0; i < brothersAndMe.length; i++) {
-				brothersAndMe[i].classList.remove('highlight')
-			}
-			li.classList.add('highlight')
-		}
-
-		let liTags = document.querySelectorAll('nav.menu > ul >li')
-		for (let i = 0; i < liTags.length; i++) {
-			liTags[i].onmouseenter = function (x) {
-				x.currentTarget.classList.add('active')
-			}
-			liTags[i].onmouseleave = function (x) {
-				x.currentTarget.classList.remove('active')
-			}
-		}
-
-		let aTags = document.querySelectorAll('nav.menu > ul > li > a')
-		function animate(time) {
-			requestAnimationFrame(animate)
-			TWEEN.update(time)
-		}
-		requestAnimationFrame(animate);
-
-		for (let i = 0; i < aTags.length; i++) {
-			aTags[i].onclick = function (x) {
-				x.preventDefault()
-				let top = document.querySelector(x.currentTarget.getAttribute('href')).offsetTop
-				//缓慢移动
-				let currentTop = window.scrollY
-				let targetTop = top - 80
-				let s = targetTop - currentTop  // 路程
-				var coords = { y: currentTop }  // 起始位置
-				var t = Math.abs((s / 100) * 300)  // 时间
-				if (t > 500) {
-					t = 500
-				}
-				var tween = new TWEEN.Tween(coords) // 起始位置
-					.to({ y: targetTop }, t)  // 结束位置 和 时间
-					.easing(TWEEN.Easing.Quadratic.InOut) // 缓动类型
-					.onUpdate(function () {
-						// coords.y 已经变了
-						window.scrollTo(0, coords.y) // 如何更新界面
-					})
-					.start(); // 开始缓动
-			}
-		}
 	</script>
 </body>
 
