使用模块化

--- a/resume.html
+++ b/resume.html
@@ -154,6 +154,7 @@
 	</section>
 	<section data-x id="siteWorks" class="portfolio">
 		<h2>作品集</h2>
+		<!--这就是View，用户看得见的东西-->
 		<!-- Slider main container -->
 		<div class="swiper-container">
 
