--- a/resume.html
+++ b/resume.html
@@ -156,7 +156,7 @@
 		<h2>作品集</h2>
 		<!--这就是View，用户看得见的东西-->
 		<!-- Slider main container -->
-		<div class="swiper-container">
+		<div class="swiper-container" id="swiper-container">
 
 			<div class="swiper-wrapper">
 				<img src="./img/works/apple-style-slides.png" alt="苹果风格轮播" class="swiper-slide">
