--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
 							<li>博客3</li>
 						</ul>
 					</li>
-					<li><a href="">日历</a></li>
+					<li><a href="#message">留言</a></li>
 					<li><a href="">联系方式</a></li>
 					<li><a href="">其他</a></li>
 				</ul>
@@ -171,7 +171,7 @@
 
 		</div>
 	</section>
-	<section class="message" id="message">
+	<section data-x class="message" id="message">
 		<h2>留言</h2>
 		<ol class="messageList" id="messageList">
 		</ol>
