--- a/resume.html
+++ b/resume.html
@@ -186,6 +186,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.3.0/Tween.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 	<script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.14.0/dist/av-min.js"></script>
+	<script src="./base/View.js"></script>
+	<script src="./base/Model.js"></script>
+	<script src="./base/Controller.js"></script>
 	<!--模块化-->
 	<script src="./js/init-swiper.js"></script>
 	<script src="./js/sticky-topbar.js"></script>
